# visualizer-demo

./: .gitignore  Cargo.toml  Taskfile.yml
app/wasm/: Cargo.toml
app/wasm/src/: lib.rs
compiler/: Cargo.toml
compiler/crates/feedback/: Cargo.toml
compiler/crates/feedback/queries/: .gitignore  add_unit.yml  duplicate_attribute.yml  equal_assignment.yml  extra_attribute.yml  incomplete_placeholder.yml  incomplete_type.yml  missing_attribute.yml  missing_number_type.yml  missing_text_type.yml  multiple_types.yml  placeholder.yml  unknown_attribute.yml  unknown_type.yml  unresolved_trait.yml  unresolved_type_name.yml  unresolved_variable_name.yml  untyped_placeholder.yml
compiler/crates/feedback/src/: feedback.rs  lib.rs  queries.rs  selectors.rs
compiler/crates/feedback/src/queries/: add_unit.rs  attribute_errors.rs  missing_literal_type.rs  mod.rs  placeholder.rs  unresolved_name.rs
compiler/crates/feedback/src/queries/add_unit/: mod.rs  template.yml
compiler/crates/feedback/src/queries/attribute_errors/: mod.rs
compiler/crates/feedback/src/queries/missing_number_type/: mod.rs  template.yml
compiler/crates/feedback/src/queries/missing_text_type/: mod.rs  template.yml
compiler/crates/feedback/src/queries/multiple_types/: mod.rs  template.yml
compiler/crates/feedback/src/queries/placeholder/: mod.rs  template.yml
compiler/crates/feedback/src/queries/unresolved_name/: mod.rs  template.yml
compiler/crates/feedback/src/queries/unresolved_named_type/: mod.rs  template.yml
compiler/crates/feedback/src/selectors/: and.rs  any_rule.rs  child.rs  influence.rs  mod.rs  node.rs  rule.rs  tys.rs
compiler/crates/lower/: Cargo.toml
compiler/crates/lower/src/: attributes.rs  constraints.rs  definitions.rs  lib.rs  visitor.rs
compiler/crates/lower/src/constraints/: bound.rs  default.rs  infer.rs  mod.rs
compiler/crates/lower/src/expressions/: annotate.rs  apply.rs  as.rs  binary.rs  block.rs  call.rs  collection.rs  do.rs  formatted_text.rs  function.rs  intrinsic.rs  is.rs  mod.rs  name.rs  number.rs  placeholder.rs  structure.rs  text.rs  trait.rs  tuple.rs  type_name.rs  unit.rs  variable.rs  variable_name.rs  when.rs
compiler/crates/lower/src/nodes/: mod.rs
compiler/crates/lower/src/nodes/constraints/: bound.rs  default.rs  infer.rs  mod.rs
compiler/crates/lower/src/nodes/expressions/: annotate.rs  as.rs  binary.rs  (+18 more)
compiler/crates/lower/src/patterns/: annotate.rs  destructure.rs  mod.rs  number.rs  or.rs  set.rs  text.rs  tuple.rs  unit.rs  variable.rs  variant.rs  wildcard.rs
compiler/crates/lower/src/statements/: assignment.rs  constant_definition.rs  expression.rs  instance_definition.rs  mod.rs  trait_definition.rs  type_definition.rs
compiler/crates/lower/src/tys/: block.rs  function.rs  mod.rs  named.rs  parameter.rs  parameterized.rs  placeholder.rs  tuple.rs  unit.rs
compiler/crates/syntax/: Cargo.toml
compiler/crates/syntax/grammar/: .gitignore  Cargo.toml  grammar.js  package.json  tree-sitter.json
compiler/crates/syntax/src/: attributes.rs  constraints.rs  expressions.rs  grammar.pest  lib.rs  patterns.rs  statements.rs  tokens.rs  types.rs
compiler/crates/trace/: Cargo.toml
compiler/crates/trace/src/: lib.rs
compiler/crates/typecheck/: Cargo.toml
compiler/crates/typecheck/src/: constraints.rs  context.rs  debug.rs  feedback.rs  id.rs  lib.rs  node.rs  session.rs  typechecker.rs  util.rs
compiler/crates/typecheck/src/nodes/: annotate.rs  block.rs  call.rs  constraint.rs  definition.rs  empty.rs  function.rs  mod.rs  placeholder.rs  tuple.rs  tuple_element.rs  unit.rs
compiler/src/: lib.rs  main.rs
compiler/src/display/: graph.rs  mod.rs  tree.rs
compiler/src/themes/: README.md
demo/bindings/: Cargo.toml
demo/bindings/src/: lib.rs  main.rs
visualizer/: Cargo.toml
visualizer/crates/db/: Cargo.toml
visualizer/crates/db/src/: display.rs  fact.rs  lib.rs  node.rs
visualizer/crates/lower/: Cargo.toml
visualizer/crates/lower/src/: attributes.rs  constraints.rs  definitions.rs  lib.rs  visitor.rs
visualizer/crates/syntax/src/: attributes.rs
visualizer/crates/typecheck/: Cargo.toml
visualizer/crates/typecheck/src/: constraints.rs  display.rs  fact.rs  groups.rs  lib.rs  solve.rs  span.rs
visualizer/src/: constraints.rs  graph.rs  groups.rs  lib.rs  main.rs  solve.rs  visualize.rs
visualizer/src/display/: graph.rs  tree.rs
wipple/: Cargo.toml  queries.yml
wipple/crates/db/: Cargo.toml
wipple/crates/db/src/: constraints.rs  db.rs  fact.rs  lib.rs  node.rs  span.rs  write.rs
wipple/crates/db/src/query/: markdown.rs  mod.rs  yaml.rs
wipple/crates/feedback/: Cargo.toml
wipple/crates/feedback/src/: lib.rs  parser.rs  query.rs
wipple/crates/syntax/src/: grammar.pest  patterns.rs  statements.rs
wipple/crates/visit/: Cargo.toml
wipple/crates/visit/src/: attributes.rs  constraints.rs  definitions.rs  lib.rs  visitor.rs
wipple/feedback/: add-unit.md  constant-without-value.md  incomplete-type.md  missing-instance.md  unknown-type.md  unresolved-variable.md
wipple/src/: feedback.rs  lib.rs  main.rs  matcher.rs  queries.rs  span.rs
wipple/syntax/: Cargo.toml
wipple/syntax/src/: expressions.rs
wipple/visit/: Cargo.toml
wipple/visit/src/: attributes.rs  constraints.rs  definitions.rs  lib.rs  visitor.rs
wipple/visit/src/nodes/constraints/: bound.rs  default.rs  infer.rs
wipple/visit/src/nodes/expressions/: annotate.rs  as.rs  binary.rs  block.rs  call.rs  collection.rs  do.rs  formatted_text.rs  function.rs  intrinsic.rs  is.rs  number.rs  placeholder.rs  structure.rs  text.rs  trait.rs  tuple.rs  unit.rs  variable.rs  when.rs
wipple/visit/src/nodes/patterns/: annotate.rs  destructure.rs  number.rs  or.rs  set.rs  text.rs  tuple.rs  unit.rs  variable.rs  variant.rs  wildcard.rs
wipple/visit/src/nodes/statements/: assignment.rs  constant_definition.rs  empty.rs  expression.rs  instance_definition.rs  trait_definition.rs  type_definition.rs
wipple/visit/src/nodes/tys/: block.rs  function.rs  mod.rs  named.rs  parameter.rs  parameterized.rs  placeholder.rs  tuple.rs  unit.rs
(+135 files in other folders)
