[workspace]
resolver = "3"
members = ["app/wasm", "visualizer", "wipple", "wipple/crates/*"]

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"

[workspace.lints.clippy]
new_without_default = "allow"
print_stderr = "warn"
dbg_macro = "warn"
result_large_err = "allow"
result_unit_err = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
