[package]
name = "wipple-visualizer"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
console_error_panic_hook = "0.1"
itertools = "0.14"
line-col = "0.2"
syntect = { version = "5", features = ["default-syntaxes", "plist-load", "regex-fancy"], default-features = false }
wasm-bindgen = "0.2"
wipple-visualizer-lower = { path = "crates/lower" }
wipple-visualizer-syntax = { path = "crates/syntax" }
wipple-visualizer-typecheck = { path = "crates/typecheck" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clearscreen = "4"
