[package]
name = "wipple"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
line-col = "0.2"
visualizer = { path = "../visualizer" }
wipple-db = { path = "crates/db" }
wipple-syntax = { path = "crates/syntax" }
wipple-visit = { path = "crates/visit" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clearscreen = "4"
