[package]
name = "wipple-compiler-feedback"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
wipple-compiler-lower = { path = "../lower" }
wipple-compiler-trace = { path = "../trace" }
wipple-compiler-typecheck = { path = "../typecheck" }
