[package]
name = "wipple-compiler-feedback"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
include_dir = { version = "0.7", features = ["glob"] }
itertools = "0.14"
petgraph = "0.8"
regex = "1"
schemars = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wipple-compiler-lower = { path = "../lower" }
wipple-compiler-trace = { path = "../trace" }
wipple-compiler-typecheck = { path = "../typecheck" }
