[package]
name = "wipple-db"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
colored = "3"
dyn-eq = "0.1"
itertools = "0.14"
regex = "1"
saphyr = "0.0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
visualizer = { path = "../../../visualizer" }
